Fix the bug that when the cart has too many items, the back button is not visible

--- a/css/cart-mobile.css
+++ b/css/cart-mobile.css
@@ -40,17 +40,19 @@ main {
   flex-direction: column;
   width: 100%;
   height: 100%;
+  min-height: 0;
 }
 
 .cart-section {
+  flex: 1;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  min-height: 0;
   padding: var(--space-2);
   padding-bottom: 0;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .cart-section h1 {
@@ -58,7 +60,6 @@ main {
   font-weight: 700;
   color: #000;
   align-self: flex-start;
-  margin-bottom: auto;
 }
 
 .cart-items {
@@ -257,4 +258,5 @@ input[type="number"]::-webkit-outer-spin-button {
   color: #000;
   font-size: 1rem;
   text-align: center;
+  justify-self: flex-end;
 }
